tests/error/union_global_private_static.gw
#! [contains] can only be used at class scope.
union private  static { int i; };
